[gd_scene load_steps=14 format=3 uid="uid://12egl2mbeuby"]

[ext_resource type="Script" path="res://scenes/battle/battle.gd" id="1_3jf6m"]
[ext_resource type="Texture2D" uid="uid://c4apqbj3lt2in" path="res://assets/battle.png" id="1_w27ij"]
[ext_resource type="Script" path="res://scenes/battle/information_area.gd" id="3_qx30n"]
[ext_resource type="PackedScene" uid="uid://dvy1netpl6vya" path="res://scenes/information_area/element_information.tscn" id="4_m6aks"]
[ext_resource type="PackedScene" uid="uid://c0wa1q5epknmx" path="res://scenes/information_area/card_information.tscn" id="5_lxb3o"]
[ext_resource type="PackedScene" uid="uid://bfxfekjh5fxt5" path="res://scenes/hand_area/hand_area.tscn" id="5_txv0v"]
[ext_resource type="Script" path="res://scenes/battle/debug_area.gd" id="6_65hhk"]
[ext_resource type="PackedScene" uid="uid://dpln4qgo6ygc4" path="res://scenes/player_area/player_area.tscn" id="6_hm0bp"]
[ext_resource type="PackedScene" uid="uid://ctl7qm3npheoi" path="res://scenes/information_area/enemy_information.tscn" id="6_wbbrc"]
[ext_resource type="PackedScene" uid="uid://s0p4ehn2rog8" path="res://scenes/deck_area/deck_area.tscn" id="7_pi1kp"]
[ext_resource type="PackedScene" uid="uid://b2bnilspetgie" path="res://scenes/enemy/enemy.tscn" id="8_734tl"]
[ext_resource type="PackedScene" uid="uid://dnwe7k1m5xgjn" path="res://scenes/enemy_area/enemy_area.tscn" id="12_fu24h"]
[ext_resource type="Resource" uid="uid://b3bpr0rwe4h0s" path="res://resources/example_battle.tres" id="13_n38k6"]

[node name="Battle" type="CanvasLayer"]
script = ExtResource("1_3jf6m")
metadata/_edit_lock_ = true

[node name="BackgroundSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_w27ij")
centered = false
metadata/_edit_lock_ = true

[node name="InformationArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -96.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 2
script = ExtResource("3_qx30n")

[node name="ElementInformation" parent="InformationArea" instance=ExtResource("4_m6aks")]
layout_mode = 2

[node name="CardInformation" parent="InformationArea" instance=ExtResource("5_lxb3o")]
layout_mode = 2

[node name="EnemyInformation" parent="InformationArea" instance=ExtResource("6_wbbrc")]
layout_mode = 2
anchors_preset = 0
offset_left = 2.0
offset_right = -2.0

[node name="CardArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -52.0
offset_right = 224.0
grow_vertical = 0
mouse_filter = 2

[node name="DeckCenterer" type="CenterContainer" parent="CardArea"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="DeckArea" parent="CardArea/DeckCenterer" instance=ExtResource("7_pi1kp")]
layout_mode = 2

[node name="HandCenterer" type="CenterContainer" parent="CardArea"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -176.0
grow_horizontal = 0
grow_vertical = 2

[node name="HandArea" parent="CardArea/HandCenterer" instance=ExtResource("5_txv0v")]
layout_mode = 2

[node name="BattleArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 224.0
offset_bottom = 112.0
mouse_filter = 1

[node name="PlayerCenterer" type="CenterContainer" parent="BattleArea"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 112.0

[node name="PlayerArea" parent="BattleArea/PlayerCenterer" instance=ExtResource("6_hm0bp")]
layout_mode = 2

[node name="EnemyCenterer" type="CenterContainer" parent="BattleArea"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -56.0
offset_bottom = 56.0
grow_horizontal = 0
grow_vertical = 2

[node name="EnemyArea" parent="BattleArea/EnemyCenterer" instance=ExtResource("12_fu24h")]
layout_mode = 2
enemy_scene = ExtResource("8_734tl")

[node name="DebugArea" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
mouse_filter = 2
script = ExtResource("6_65hhk")
example_battle = ExtResource("13_n38k6")

[node name="HFlowContainer" type="HFlowContainer" parent="DebugArea"]
layout_mode = 2

[node name="CardBackSelector" type="OptionButton" parent="DebugArea/HFlowContainer"]
layout_mode = 2
selected = 0
fit_to_longest_item = false
item_count = 2
popup/item_0/text = "Logo"
popup/item_1/text = "Symmetric"
popup/item_1/id = 1

[node name="WindowModeSelector" type="OptionButton" parent="DebugArea/HFlowContainer"]
layout_mode = 2
selected = 0
fit_to_longest_item = false
item_count = 4
popup/item_0/text = "Windowed"
popup/item_1/text = "Maximize"
popup/item_1/id = 2
popup/item_2/text = "Fullscreen"
popup/item_2/id = 3
popup/item_3/text = "Ex. Fullscreen"
popup/item_3/id = 4

[node name="Draw" type="Button" parent="DebugArea/HFlowContainer"]
layout_mode = 2
text = "Draw"

[node name="Save" type="Button" parent="DebugArea/HFlowContainer"]
layout_mode = 2
text = "Save"

[node name="LoadTemplate" type="Button" parent="DebugArea/HFlowContainer"]
layout_mode = 2
text = "Load Template"

[node name="Reload" type="Button" parent="DebugArea/HFlowContainer"]
layout_mode = 2
text = "Reload"

[node name="Reset" type="Button" parent="DebugArea/HFlowContainer"]
layout_mode = 2
text = "Reset"

[node name="End Turn" type="Button" parent="DebugArea/HFlowContainer"]
layout_mode = 2
text = "End Turn"

[node name="Label" type="Label" parent="DebugArea"]
layout_mode = 2
text = "Debug text"

[connection signal="item_selected" from="DebugArea/HFlowContainer/CardBackSelector" to="DebugArea" method="_on_button_item_selected"]
[connection signal="item_selected" from="DebugArea/HFlowContainer/WindowModeSelector" to="DebugArea" method="_on_window_mode_selector_item_selected"]
[connection signal="button_down" from="DebugArea/HFlowContainer/Draw" to="DebugArea" method="_on_draw_button_down"]
[connection signal="button_down" from="DebugArea/HFlowContainer/Save" to="DebugArea" method="_on_save_button_down"]
[connection signal="button_down" from="DebugArea/HFlowContainer/LoadTemplate" to="DebugArea" method="_on_load_template_button_down"]
[connection signal="button_down" from="DebugArea/HFlowContainer/Reload" to="DebugArea" method="_on_reload_button_down"]
[connection signal="button_down" from="DebugArea/HFlowContainer/Reset" to="DebugArea" method="_on_reset_button_down"]
[connection signal="button_down" from="DebugArea/HFlowContainer/End Turn" to="DebugArea" method="_on_end_turn_button_down"]
